<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_name1"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/login_name"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:background="@drawable/register_input"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignStart="@id/login_name1"
            android:layout_alignBottom="@id/login_name1"
            android:layout_alignTop="@id/login_name1"
            android:layout_marginStart="10dp"
            android:src="@drawable/account"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/psw1"
            android:layout_marginTop="20dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/enter_pass"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/register_input"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignStart="@id/psw1"
            android:layout_alignBottom="@id/psw1"
            android:layout_alignTop="@id/psw1"
            android:layout_marginStart="10dp"
            android:src="@drawable/psw"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/psw2"
            android:layout_marginTop="20dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/verify_pass"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/register_input"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignStart="@id/psw2"
            android:layout_alignBottom="@id/psw2"
            android:layout_alignTop="@id/psw2"
            android:layout_marginStart="10dp"
            android:src="@drawable/psw"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/register_warn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:text="@string/psw_warn"
        android:gravity="right"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/register"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:background="@drawable/blue_radius_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

</LinearLayout>