<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_name"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/login_name"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:background="@drawable/login_input"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignStart="@id/login_name"
            android:layout_alignBottom="@id/login_name"
            android:layout_alignTop="@id/login_name"
            android:layout_marginStart="10dp"
            android:src="@drawable/account"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/psw"
            android:layout_marginTop="20dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:hint="@string/enter_pass"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/login_input"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignStart="@id/psw"
            android:layout_alignBottom="@id/psw"
            android:layout_alignTop="@id/psw"
            android:layout_marginStart="10dp"
            android:src="@drawable/psw"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/login_btn"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/go_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_register"
        android:textSize="13sp"
        android:layout_marginTop="3dp"
        android:textColor="@color/link_blue"
        />
</LinearLayout>